<resources>

    <!-- detail Info aplikasi kalkulator -->

    <string name="app_name">Kalkulator KLP5</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="welcome_msg">Welcome to Kalkulator</string>



    <!-- detail keterangan simbol-->

    <string name="square_root_symbol">√¯¯</string>

    <string name="squared_two">"x²"</string>

    <string name="qube">"X³"</string>

    <string name="delete_numbers">"⇐"</string>


    <string name="degree_celsius">"ºC"</string>

    <string name="pi">"π"</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="bin">bin</string>
    <string name="dec">dec</string>
    <string name="hex">hex</string>
    <string name="oct">oct</string>
    <string name="exit">Exit</string>
    <string name="c">C</string>
    <string name="plus">+</string>


    <!-- TAMPILAN APLIKASI -->

    <style name="ButtonText">

        <item name="android:layout_width">34dp</item>

        <item name="android:layout_height">40dp</item>

        <item name="android:textColor">#ffffff</item>

        <item name="android:gravity">center</item>

        <item name="android:layout_margin">3dp</item>

        <item name="android:textSize">23sp</item>

        <item name="android:textStyle" />


        <item name="android:shadowColor">#000000</item>

        <item name="android:shadowDx">1</item>

        <item name="android:shadowDy">1</item>

        <item name="android:shadowRadius">2</item>

    </style>

</resources>