<?xml version="1.0" encoding="utf-8"?>
<!-- Mulai Backgroudn belakang -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"

    android:layout_height="fill_parent"

    android:layout_margin="10dp"

    android:layout_marginTop="50dp"

    android:background="@color/Gray"

    android:orientation="vertical" >


    <!-- 1 layar layout 2 -->


    <LinearLayout

        android:id="@+id/linearLayout2"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:orientation="horizontal" >


        <!-- inputan user -->


        <EditText

            android:id="@+id/editText1"

            android:layout_width="fill_parent"

            android:layout_height="108dp"

            android:autofillHints=""

            android:clickable="false"

            android:cursorVisible="false"

            android:gravity="right|center_vertical"

            android:textSize="42sp" />

    </LinearLayout>

    <!-- end 1 -->



    <!-- mulai 2 BUTTON sin cos tan -->


    <LinearLayout

        android:id="@+id/linearLayout1"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:layout_marginBottom="5dp"

        android:orientation="horizontal" >


        <!-- tombol sin -->


        <Button

            android:id="@+id/button_sin"

            style="@style/ButtonText"

            android:layout_marginEnd="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_sin"

            android:padding="0dp"

            android:text="@string/sin"

            android:textColor="@color/White"
            android:focusable="true" />


        <!-- tombol cos -->


        <Button

            android:id="@+id/button_cos"

            style="@style/ButtonText"

            android:layout_marginEnd="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_cos"

            android:padding="0dp"

            android:text="@string/cos"

            android:textColor="@color/White"
            android:focusable="true" />


        <!-- tombol TAN -->


        <Button

            android:id="@+id/button_tan"

            style="@style/ButtonText"

            android:layout_marginEnd="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_tan"

            android:padding="0dp"

            android:text="@string/tan"

            android:textColor="@color/White"
            android:focusable="true" />


        <!-- tombol hapus Backshape -->

        <Button

            android:id="@+id/button_del"

            style="@style/ButtonText"

            android:layout_marginEnd="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_del"

            android:padding="0dp"

            android:text="⇐"

            android:textColor="@color/Red"

            android:textSize="28sp"

            android:textStyle="bold"

            android:focusable="true" />

    </LinearLayout>

    <!-- end 2 button -->



    <!-- layout 3 button dec,bin,hex -->

    <LinearLayout

        android:id="@+id/linearLayout11"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:layout_marginBottom="5dp"

        android:orientation="horizontal" >


        <Button

            android:id="@+id/button_bin"

            style="@style/ButtonText"

            android:layout_marginEnd="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_bin"

            android:padding="0dp"

            android:text="@string/bin"

            android:textColor="@color/White"
            android:focusable="true" />


        <Button

            android:id="@+id/button_dec"

            style="@style/ButtonText"

            android:layout_marginEnd="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_dec"

            android:padding="0dp"

            android:text="@string/dec"

            android:textColor="@color/White"
            android:focusable="true" />


        <Button

            android:id="@+id/button_hex"

            style="@style/ButtonText"

            android:layout_marginEnd="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_hex"

            android:padding="0dp"

            android:text="@string/hex"

            android:textColor="@color/White"
            android:focusable="true" />


        <Button

            android:id="@+id/button_oct"

            style="@style/ButtonText"

            android:layout_marginEnd="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_oct"

            android:padding="0dp"

            android:text="@string/oct"

            android:textColor="@color/White"
            android:focusable="true" />

    </LinearLayout>

    <!-- end 2 -->



    <!-- 3 button square dll -->


    <LinearLayout

        android:id="@+id/linearLayout10"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:layout_marginBottom="5dp"

        android:orientation="horizontal" >


        <Button

            android:id="@+id/button_squared_2"

            style="@style/ButtonText"

            android:layout_marginEnd="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_squared_2"

            android:padding="0dp"

            android:text="x²"

            android:textColor="@color/White" />


        <Button

            android:id="@+id/button_qube"

            style="@style/ButtonText"

            android:layout_marginRight="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_qube"

            android:padding="0dp"

            android:text="X³"

            android:textColor="@color/White" />


        <Button

            android:id="@+id/button_root"

            style="@style/ButtonText"

            android:layout_marginRight="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_root"

            android:padding="0dp"

            android:text="@string/square_root_symbol"

            android:textColor="@color/White" />


        <Button

            android:id="@+id/button_pi"

            style="@style/ButtonText"

            android:layout_marginRight="5dp"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:clickable="true"

            android:onClick="onClickListener_pi"

            android:padding="0dp"

            android:text="π"

            android:textColor="@color/White" />

    </LinearLayout>

    <!-- End 3 square -->



    <!-- Spasi jarak -->


    <LinearLayout

        android:id="@+id/linearLayout6"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:orientation="horizontal" >


        <TextView

            android:layout_width="fill_parent"

            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- akhir Spasi jarak -->



    <!-- Button angka 7896: - -->


    <LinearLayout

        android:id="@+id/linearLayout8"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:orientation="horizontal" >


        <Button

            android:id="@+id/button7"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1"

            android:background="@drawable/btn_white"

            android:onClick="onClickListener7"

            android:text="7"

            android:textColor="@color/Black"

            android:textSize="40dp" />


        <Button

            android:id="@+id/button8"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1"

            android:background="@drawable/btn_white"

            android:onClick="onClickListener8"

            android:text="8"

            android:textColor="@color/Black"

            android:textSize="40dp" />


        <Button

            android:id="@+id/button9"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1.00"

            android:background="@drawable/btn_white"

            android:onClick="onClickListener9"

            android:text="9"

            android:textColor="@color/Black"

            android:textSize="40dp" />


        <Button

            android:id="@+id/buttonDivide"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1.00"

            android:background="@drawable/btn_gray"

            android:onClick="onClickListenerDivide"

            android:text="/"

            android:textColor="@color/White"

            android:textSize="40dp" />

    </LinearLayout>

    <!-- Button 7896: - -->



    <!-- Button angka 456x - -->


    <LinearLayout

        android:id="@+id/linearLayout9"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:orientation="horizontal" >


        <Button

            android:id="@+id/button4"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1"

            android:background="@drawable/btn_white"

            android:onClick="onClickListener4"

            android:text="4"

            android:textColor="@color/Black"

            android:textSize="40dp" />


        <Button

            android:id="@+id/button5"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1"

            android:background="@drawable/btn_white"

            android:onClick="onClickListener5"

            android:text="5"

            android:textColor="@color/Black"

            android:textSize="40dp" />


        <Button

            android:id="@+id/button6"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1.00"

            android:background="@drawable/btn_white"

            android:onClick="onClickListener6"

            android:text="6"

            android:textColor="@color/Black"

            android:textSize="40dp" />


        <Button

            android:id="@+id/buttonMultiply"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1.00"

            android:background="@drawable/btn_gray"

            android:onClick="onClickListenerMultiply"

            android:text="*"

            android:textColor="@color/White"

            android:textSize="40dp" />

    </LinearLayout>

    <!-- Button 456x - -->



    <!-- Button angka 123 - -->

    <LinearLayout

        android:id="@+id/linearLayout7"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:orientation="horizontal" >


        <Button

            android:id="@+id/button1"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1"

            android:background="@drawable/btn_white"

            android:onClick="onClickListener1"

            android:text="1"

            android:textColor="@color/Black"

            android:textSize="40dp" />


        <Button

            android:id="@+id/button2"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1"

            android:background="@drawable/btn_white"

            android:onClick="onClickListener2"

            android:text="2"

            android:textColor="@color/Black"

            android:textSize="40dp" />


        <Button

            android:id="@+id/button3"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1"

            android:background="@drawable/btn_white"

            android:onClick="onClickListener3"

            android:text="3"

            android:textColor="@color/Black"

            android:textSize="40dp" />


        <Button

            android:id="@+id/buttonMinus"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1.00"

            android:background="@drawable/btn_gray"

            android:onClick="onClickListenerMinus"

            android:text="-"

            android:textColor="@color/White"

            android:textSize="42dp" />

    </LinearLayout>

    <!-- Button 123- -->



    <!-- Button 0+=. - -->


    <LinearLayout

        android:id="@+id/linearLayout3"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:orientation="horizontal" >



        <Button

            android:id="@+id/buttonPoint"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1.2"

            android:background="@drawable/btn_white"

            android:onClick="onClickListenerPoint"

            android:text="."

            android:textColor="@color/Black"

            android:textSize="44dp" />


        <Button

            android:id="@+id/button0"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1"

            android:background="@drawable/btn_white"

            android:onClick="onClickListener0"

            android:text="0"

            android:textColor="@color/Black"

            android:textSize="40dp" />



        <Button

            android:id="@+id/buttonEqual"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1.2"

            android:background="@drawable/btn_orange"

            android:onClick="onClickListenerEqual"

            android:text="="

            android:textColor="@color/White"

            android:textSize="40dp" />


        <Button

            android:id="@+id/buttonPlus"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1"

            android:background="@drawable/btn_gray"

            android:onClick="onClickListenerPlus"

            android:text="@string/plus"

            android:textColor="@color/White"

            android:textSize="40sp" />

    </LinearLayout>

    <!-- Button 3210 - -->



    <!-- Jarak spasi 2 -->


    <LinearLayout

        android:id="@+id/linearLayout5"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:orientation="horizontal" >


        <TextView

            android:layout_width="fill_parent"

            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Jarak spasi 2 -->



    <!-- layout paling bawah exit ,clear -->

    <LinearLayout

        android:id="@+id/linearLayout4"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:orientation="horizontal" >


        <Button

            android:id="@+id/buttonExit"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="fill_parent"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:onClick="onClickListenerExit"

            android:paddingTop="15dp"

            android:text="@string/exit"

            android:textColor="@color/White"

            android:textSize="25sp" />


        <Button

            android:id="@+id/buttonReset"

            style="@style/ButtonText"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:background="@drawable/btn_black"

            android:onClick="onClickListenerReset"

            android:text="@string/c"

            android:textStyle="bold"

            android:textColor="@color/Red"

            android:textSize="30sp" />

    </LinearLayout>


</LinearLayout> <!-- End Backgroudn belakang -->